--- a/skin/faceted_search.css
+++ b/skin/faceted_search.css
@@ -19,7 +19,7 @@
     div#results { width:80%; }  
 }
 
-#fs_query_button, .xfsCategoryFilter, .xfsSortOrder {
+#fs_query_button, .fs_category_filter, .fs_sort_order {
 	margin-top: 5px;
 	margin-bottom: 5px;
 	white-space:nowrap;
@@ -35,6 +35,7 @@
 	padding: 0 0 10px 10px;
 	word-wrap: break-word;
 }
+
 .detailsImage {
 	cursor: pointer;
 }
@@ -243,4 +244,16 @@ div.fs_error_hint {
 	padding: 15px;
 	background-color: red;
 	color: white;
+}
+
+.globalSpinner{
+    position:fixed;
+    z-index:10000;/* make higher than whatever is on the page */
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    margin:auto;
+    width:100px;
+    height:100px;
 }
